syntax="proto3";
package vpn;
option go_package="github.com/shivamp1998/vpn_backend/proto/gen";


service UserService {
    rpc Login(LoginRequest) returns (AuthenticationResponse);
    rpc Register(RegisterRequest) returns (AuthenticationResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}


message AuthenticationResponse {
    string status = 1;
    string token = 2;
}


service ServerService {
    rpc CreateServer(CreateServerRequest) returns (CreateServerResponse);
    rpc ListServers(ListServerRequest) returns (ListServerResponse);
    rpc GetServer(GetServerRequest) returns (GetServerResponse);
}

message Server {
    string id = 1;
    string name = 2;
    string endpoint = 3;
    string public_key = 4;
    string region = 5;
    int32 max_clients = 6;
    int32 current_clients = 7;
}


message CreateServerRequest {
    string name = 1;
    string endpoint = 2;
    string region = 3;
    int32 max_clients = 4;
    string public_key = 5;
}

message CreateServerResponse {
    Server server = 1;
    string message = 2;
}

message ListServerRequest {

}

message ListServerResponse {
    repeated Server servers = 1;
}

message GetServerRequest {
    string server_id = 1; 
}

message GetServerResponse {
    Server server = 1;
}

service ConfigService {
    rpc GenerateConfig(GenerateConfigRequest) returns (GenerateConfigResponse);
    rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
    rpc RotateKeys(GenerateConfigRequest) returns (GetConfigResponse);
}

message GenerateConfigRequest {
    string server_id = 1;
}

message GenerateConfigResponse {
    string config_content = 1;
    string qr_code_base64 = 2;
    ConfigData config_data = 3;
    string message = 4;
}

message ConfigData {
    string private_key = 1;
    string public_key = 2;
    string server_public_key = 3;
    string server_endpoint = 4;
    string server_address = 5;
    string server_port = 6;
    string client_ip = 7;
    string dns = 8;
}

message GetConfigRequest {
    string server_id = 1;
    string user_id = 2;
}

message GetConfigResponse {
    ConfigData config_data = 1;
    string config_content = 2;
    string qr_code_base64 = 3;
}